# screen-ui

./: .gitignore  CMakeLists.txt  NotoSans[wght]_9X10.c  NotoSans_9X10.c  README.md
docs/superpowers/plans/: 2026-05-03-widget-list.md
docs/superpowers/specs/: 2026-05-03-widget-list-design.md
examples/: CMakeLists.txt  layouts.c  layouts.h  main.c  render_impl_console.c  render_impl_sdl.c  render_impl_st7789.c  screen_example.c  screen_example.h  theme_default.h
fonts/: font_8x8.c  font_mono16.c  font_noto10.c  font_noto12.c  font_noto16.c  font_noto20.c  font_roboto10.c  font_roboto12.c  font_roboto16.c  font_roboto20.c  font_terminus12.c  font_terminus14.c  font_terminus16.c  font_terminus18.c  font_terminus20.c  font_terminus22.c  font_terminus24.c  fonts.h  gen_font.py
gfx/: gfx.h
layouts/: layouts.c  layouts.h
render/: ctx.h  render.c  render.h  view.h  view_default.c
screen/: screen.h  screen_manager.c  screen_manager.h
theme/: theme.h
tools/: gen_font.py  gen_font_ttf.py
widget/: widget.h  widget_list.h
